...
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signuptype_button_newgroup">

            <TextView
                style="@style/_LightButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
...
